--- a/src/components/common/aq-sub-toolbar.html
+++ b/src/components/common/aq-sub-toolbar.html
@@ -38,14 +38,18 @@
             ::content .iconButton:active {
                 padding: 8px;
             }
-            ::content .checkbox-all{
-                position: relative;
-                margin-left:30px;
-            }
+            
+
             ::content .strategy-header{
                 font-size: 14px;
                 margin-left: 10px;
             }
+
+            ::content p {
+                font-size: 13px;
+            }
+
+
         </style>
 
         <div class="toolbar layout horizontal">
