--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -98,7 +98,7 @@
             margin: 0 auto;
             color: #24293d;
             width: 100%;
-
+            margin-top: 30px;
         }
 
         #actions aq-editor-home-elementmenu {
@@ -244,7 +244,7 @@
                          value="{{searchText::change}}"
                          on-keydown="checkForKeys" on-blur='blur'>
                   <paper-button raised class="btn search-btn" on-tap="search">Search</paper-button>
-               </div>
+                </div>
 
                 <div id='ifsearch'>
                     <p class="strategy-result">Strategy results for
