Css modifications to about page, main toolbar and profile image colors

--- a/src/components/aq-aboutpage.html
+++ b/src/components/aq-aboutpage.html
@@ -23,7 +23,7 @@
       }
 
       #container-bg {
-        background: #f2fbf7;
+        background: #fff;
         height: 100%;
       }
 
@@ -33,16 +33,13 @@
         max-width:500px;
         margin-bottom: 20px;
         margin-top:100px;
+        --paper-tabs-selection-bar-color: #cc6666;
       }
 
       paper-tab {
         width:10%;
-        color:#001b1b;
+        color: teal;
         font-size: 16px;
-      }
-
-      paper-tabs {
-        --paper-tabs-selection-bar-color: #001b1b;
       }
 
     </style>
@@ -103,7 +100,7 @@
             </iron-pages>
 
             <div class="flex"></div>
-            <footer><p>© 2016 AimsQuant</p></footer>
+            <!--footer><p>© 2017 AimsQuant</p></footer-->
 
           </div>  
     
@@ -191,7 +188,7 @@
     .header {
       font-size:40px;
       font-weight: bold;
-      color:#001b1b;
+      color: teal;
       font-style: inherit !important;
     }
 
