--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -23,7 +23,7 @@
 
         paper-toolbar {
             height: 8vh;
-            color: #546E7A;
+            color: teal;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
