--- a/src/components/common/aq-backtest-metric-item-list.html
+++ b/src/components/common/aq-backtest-metric-item-list.html
@@ -6,6 +6,12 @@
 	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
 
+	<style>
+		#container {
+			padding-left: 10px;
+		}
+	</style>
+
 	<template>
 		<iron-media-query query="(max-width: 1050px)" query-matches="{{superWide}}"></iron-media-query>
 
