--- a/src/components/common/aq-backtest-metric-item.html
+++ b/src/components/common/aq-backtest-metric-item.html
@@ -19,7 +19,7 @@
 				font-size: var(--aq-backtest-metric-item-text-content-font-size,1em);
 			}
 			.li-container {
-				text-align: center;
+				--text-align: center;
 				margin-top: 5px;
 				margin-bottom: 5px;
 			}
