Changed color of aq-profil-img

--- a/src/components/aq-profile-img.html
+++ b/src/components/aq-profile-img.html
@@ -23,8 +23,8 @@
       height: 35px;
       transition: transform 350ms ease-in-out;
       background-color: white;
-      color: teal;
-      border: 1px solid teal;
+      color: #24293d;
+      border: 1px solid #24293d;
       will-change: transform;
       cursor: pointer;
       
